# Document-Q-A-System-with-RAG

./: .dockerignore  README.md  dockerfile  index.html  pyproject.toml  requirements.txt  run.py  script.js  style.css
app/: main.py
app/api/routers/: activities.py  chat.py  jobs.py  scholarship.py  tts.py
app/mcp/: rag.py  utils.py
app/models/: schemas.py
app/rag/: agent.py  tools.py
app/services/: activities_service.py  jobs_service.py  rag_service.py  scholarships_service.py  tts_service.py
notebook/: StyleTTS2_lite_vi_(2s).ipynb  search_tools.ipynb  tts.ipynb
